--- a/your-code/challenge-1.ipynb
+++ b/your-code/challenge-1.ipynb
@@ -19,12 +19,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import libraries\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import scipy.stats as stats\n"
    ]
   },
   {
@@ -38,11 +39,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "file_path = \"Pokemon.csv\"\n",
+    "\n",
+    "pokemon_df = pd.read_csv(file_path)\n",
+    "\n"
    ]
   },
   {
@@ -58,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,11 +79,50 @@
     "    Returns:\n",
     "        dict: a dictionary of t-test scores for each feature where the feature name is the key and the p-value is the value\n",
     "    \"\"\"\n",
+    "    \n",
     "    results = {}\n",
     "\n",
     "    # Your code here\n",
-    "    \n",
+    "\n",
+    "    for feature in features:\n",
+    "\n",
+    "        sample1_values = s1[feature]\n",
+    "        sample2_values = s2[feature]\n",
+    "        \n",
+    "        t_stat, p_value = stats.ttest_ind(sample1_values, sample2_values)\n",
+    "        results[feature] = p_value\n",
+    "\n",
     "    return results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'HP': 0.2901857747516363,\n",
+       " 'Attack': 0.44454614858173114,\n",
+       " 'Defense': 0.40499638697774176,\n",
+       " 'Sp. Atk': 0.36190312434802097,\n",
+       " 'Sp. Def': 0.9402537653539583,\n",
+       " 'Speed': 0.4085859372520645,\n",
+       " 'Total': 0.2921590890436324}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s1 = pokemon_df.sample(100)\n",
+    "s2 = pokemon_df.sample(100)\n",
+    "\n",
+    "results = t_test_features(s1, s2)\n",
+    "results"
    ]
   },
   {
@@ -101,11 +146,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "def t_test_features(s3, s4, features=['HP', 'Attack', 'Defense', 'Sp. Atk', 'Sp. Def', 'Speed', 'Total']):\n",
+    "    \n",
+    "    results = {}\n",
+    "    \n",
+    "    for feature in features:\n",
+    "        \n",
+    "        sample1_values = s3[\"Legendary\"] == True\n",
+    "        sample2_values = s4[\"Legendary\"] == False\n",
+    "        \n",
+    "        t_stat, p_value = stats.ttest_ind(sample1_values, sample2_values)\n",
+    "        results[feature] = p_value\n",
+    "\n",
+    "    return results\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'HP': 1.3486833199987016e-16,\n",
+       " 'Attack': 1.3486833199987016e-16,\n",
+       " 'Defense': 1.3486833199987016e-16,\n",
+       " 'Sp. Atk': 1.3486833199987016e-16,\n",
+       " 'Sp. Def': 1.3486833199987016e-16,\n",
+       " 'Speed': 1.3486833199987016e-16,\n",
+       " 'Total': 1.3486833199987016e-16}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s3 = pokemon_df.sample(30)\n",
+    "s4 = pokemon_df.sample(30)\n",
+    "\n",
+    "results = t_test_features(s3, s4)\n",
+    "results"
    ]
   },
   {
@@ -117,11 +206,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your comment here"
+    "# Your comment here\n",
+    "\n",
+    "#The null hypothesis says that there is no significant difference between the two groups being compared. \n",
+    "#Since the p_values are low, we can say that poke that are legendary have very different stats then non legendary"
    ]
   },
   {
@@ -133,11 +225,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "def t_test_features(s5, s6, features=['HP', 'Attack', 'Defense', 'Sp. Atk', 'Sp. Def', 'Speed', 'Total']):\n",
+    "    \n",
+    "    results = {}\n",
+    "    \n",
+    "    for feature in features:\n",
+    "\n",
+    "        sample1_values = s5[\"Generation\"] == 1\n",
+    "        sample2_values = s6[\"Generation\"] == 2\n",
+    "        \n",
+    "        t_stat, p_value = stats.ttest_ind(sample1_values, sample2_values)\n",
+    "        results[feature] = p_value\n",
+    "\n",
+    "    return results\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'HP': 0.7014144686668059,\n",
+       " 'Attack': 0.7014144686668059,\n",
+       " 'Defense': 0.7014144686668059,\n",
+       " 'Sp. Atk': 0.7014144686668059,\n",
+       " 'Sp. Def': 0.7014144686668059,\n",
+       " 'Speed': 0.7014144686668059,\n",
+       " 'Total': 0.7014144686668059}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s5 = pokemon_df.sample(100)\n",
+    "s6 = pokemon_df.sample(100)\n",
+    "\n",
+    "results = t_test_features(s5, s6)\n",
+    "results"
    ]
   },
   {
@@ -149,11 +285,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your comment here"
+    "# Your comment here\n",
+    "\n",
+    "#based on the pvalues, There is no significant diference between gen1 and gen2 stats"
    ]
   },
   {
@@ -165,11 +303,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "def t_test_features(s7, s8, features=['HP', 'Attack', 'Defense', 'Sp. Atk', 'Sp. Def', 'Speed', 'Total']):\n",
+    "    results = {}\n",
+    "    \n",
+    "    for feature in features:\n",
+    "\n",
+    "        sample1_values = s7[\"Type 2\"].isna()\n",
+    "        sample2_values = s8[\"Type 2\"].notna()\n",
+    "        \n",
+    "        t_stat, p_value = stats.ttest_ind(sample1_values, sample2_values)\n",
+    "        results[feature] = p_value\n",
+    "\n",
+    "    return results\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'HP': 0.319127359025322,\n",
+       " 'Attack': 0.319127359025322,\n",
+       " 'Defense': 0.319127359025322,\n",
+       " 'Sp. Atk': 0.319127359025322,\n",
+       " 'Sp. Def': 0.319127359025322,\n",
+       " 'Speed': 0.319127359025322,\n",
+       " 'Total': 0.319127359025322}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s7 = pokemon_df.sample(100)\n",
+    "s8 = pokemon_df.sample(100)\n",
+    "\n",
+    "results = t_test_features(s7, s8)\n",
+    "results"
    ]
   },
   {
@@ -181,11 +363,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your comment here"
+    "# Your comment here\n",
+    "\n",
+    "#there is no significant difference for stats of gen1 and gen2"
    ]
   },
   {
@@ -199,11 +383,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "def t_test_features(s9, features=[('Attack', 'Defense'), ('Sp. Atk', 'Sp. Def')]):\n",
+    "    results = {}\n",
+    "    \n",
+    "    for feature_AD_S in features:\n",
+    "        feature1, feature2 = feature_AD_S\n",
+    "\n",
+    "        sample1_values = s9[feature1]\n",
+    "        sample2_values = s9[feature2]\n",
+    "\n",
+    "        \n",
+    "        t_stat, p_value = stats.ttest_ind(sample1_values, sample2_values)\n",
+    "        results[feature1, feature2] = p_value\n",
+    "\n",
+    "    return results\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{('Attack', 'Defense'): 0.1741486659673652,\n",
+       " ('Sp. Atk', 'Sp. Def'): 0.832201833368861}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s9 = pokemon_df.sample(100)\n",
+    "\n",
+    "results = t_test_features(s9)\n",
+    "results"
    ]
   },
   {
@@ -215,12 +440,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your comment here"
+    "# Your comment here\n",
+    "\n",
+    "#for attack vs defense we cannot say there is a significant difference for the sample.\n",
+    "\n",
+    "#for speed attack and defense its the same\n",
+    "\n",
+    "#In both cases, based on the p-values, there is no strong statistical \n",
+    "#evidence that these attributes have very different means for all poke in the sample\n",
+    "\n",
+    "\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -239,7 +481,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
