--- a/your-code/challenge-2.ipynb
+++ b/your-code/challenge-2.ipynb
@@ -17,21 +17,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import libraries\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import scipy.stats as stats"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the data:\n"
+    "# Load the data:\n",
+    "file_path = \"Pokemon.csv\"\n",
+    "\n",
+    "pokemon_df = pd.read_csv(file_path)"
    ]
   },
   {
@@ -58,14 +62,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here\n",
     "\n",
-    "\n",
-    "len(unique_types) # you should see 19"
+    "types_combined = pd.concat([pokemon_df[\"Type 1\"], pokemon_df[\"Type 2\"]])\n",
+    "unique_types = types_combined.dropna().unique()\n",
+    "len(unique_types) # you should see 19\n"
    ]
   },
   {
@@ -85,13 +101,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pokemon_totals = []\n",
     "\n",
     "# Your code here\n",
+    "\n",
+    "for poke_type in unique_types:\n",
+    "    \n",
+    "    if type(poke_type) == str:\n",
+    "        \n",
+    "        type_totals = pokemon_df[(pokemon_df['Type 1'] == poke_type) | (pokemon_df['Type 2'] == poke_type)]['Total']\n",
+    "\n",
+    "        pokemon_totals.append(type_totals)\n",
+    "\n",
     "\n",
     "len(pokemon_totals) # you should see 18"
    ]
@@ -111,11 +147,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F-statistic: 6.6175382960055344\n",
+      "P-value: 2.6457458815984803e-15\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "from scipy.stats import f_oneway \n",
+    "\n",
+    "f_statistic, p_value = f_oneway(*pokemon_totals)\n",
+    "\n",
+    "print(\"F-statistic:\", f_statistic)\n",
+    "\n",
+    "print(\"P-value:\", p_value)\n"
    ]
   },
   {
@@ -127,11 +179,256 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your comment here"
+    "# Your comment here\n",
+    "\n",
+    "#the Fstats value oof 6.62 suggests that are differences between at least some pokemons types, about the total\n",
+    "\n",
+    "#a small pvalue suggests that is likely to be a difference is totals in pokemon types."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>#</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Type 1</th>\n",
+       "      <th>Type 2</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>HP</th>\n",
+       "      <th>Attack</th>\n",
+       "      <th>Defense</th>\n",
+       "      <th>Sp. Atk</th>\n",
+       "      <th>Sp. Def</th>\n",
+       "      <th>Speed</th>\n",
+       "      <th>Generation</th>\n",
+       "      <th>Legendary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>302</th>\n",
+       "      <td>279</td>\n",
+       "      <td>Pelipper</td>\n",
+       "      <td>Water</td>\n",
+       "      <td>Flying</td>\n",
+       "      <td>430</td>\n",
+       "      <td>60</td>\n",
+       "      <td>50</td>\n",
+       "      <td>100</td>\n",
+       "      <td>85</td>\n",
+       "      <td>70</td>\n",
+       "      <td>65</td>\n",
+       "      <td>3</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>726</th>\n",
+       "      <td>658</td>\n",
+       "      <td>Greninja</td>\n",
+       "      <td>Water</td>\n",
+       "      <td>Dark</td>\n",
+       "      <td>530</td>\n",
+       "      <td>72</td>\n",
+       "      <td>95</td>\n",
+       "      <td>67</td>\n",
+       "      <td>103</td>\n",
+       "      <td>71</td>\n",
+       "      <td>122</td>\n",
+       "      <td>6</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>240</th>\n",
+       "      <td>222</td>\n",
+       "      <td>Corsola</td>\n",
+       "      <td>Water</td>\n",
+       "      <td>Rock</td>\n",
+       "      <td>380</td>\n",
+       "      <td>55</td>\n",
+       "      <td>55</td>\n",
+       "      <td>85</td>\n",
+       "      <td>65</td>\n",
+       "      <td>85</td>\n",
+       "      <td>35</td>\n",
+       "      <td>2</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>615</th>\n",
+       "      <td>555</td>\n",
+       "      <td>DarmanitanStandard Mode</td>\n",
+       "      <td>Fire</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>480</td>\n",
+       "      <td>105</td>\n",
+       "      <td>140</td>\n",
+       "      <td>55</td>\n",
+       "      <td>30</td>\n",
+       "      <td>55</td>\n",
+       "      <td>95</td>\n",
+       "      <td>5</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>220</th>\n",
+       "      <td>205</td>\n",
+       "      <td>Forretress</td>\n",
+       "      <td>Bug</td>\n",
+       "      <td>Steel</td>\n",
+       "      <td>465</td>\n",
+       "      <td>75</td>\n",
+       "      <td>90</td>\n",
+       "      <td>140</td>\n",
+       "      <td>60</td>\n",
+       "      <td>60</td>\n",
+       "      <td>40</td>\n",
+       "      <td>2</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>387</th>\n",
+       "      <td>354</td>\n",
+       "      <td>BanetteMega Banette</td>\n",
+       "      <td>Ghost</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>555</td>\n",
+       "      <td>64</td>\n",
+       "      <td>165</td>\n",
+       "      <td>75</td>\n",
+       "      <td>93</td>\n",
+       "      <td>83</td>\n",
+       "      <td>75</td>\n",
+       "      <td>3</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>632</th>\n",
+       "      <td>571</td>\n",
+       "      <td>Zoroark</td>\n",
+       "      <td>Dark</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>510</td>\n",
+       "      <td>60</td>\n",
+       "      <td>105</td>\n",
+       "      <td>60</td>\n",
+       "      <td>120</td>\n",
+       "      <td>60</td>\n",
+       "      <td>105</td>\n",
+       "      <td>5</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>564</th>\n",
+       "      <td>505</td>\n",
+       "      <td>Watchog</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>420</td>\n",
+       "      <td>60</td>\n",
+       "      <td>85</td>\n",
+       "      <td>69</td>\n",
+       "      <td>60</td>\n",
+       "      <td>69</td>\n",
+       "      <td>77</td>\n",
+       "      <td>5</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>376</th>\n",
+       "      <td>344</td>\n",
+       "      <td>Claydol</td>\n",
+       "      <td>Ground</td>\n",
+       "      <td>Psychic</td>\n",
+       "      <td>500</td>\n",
+       "      <td>60</td>\n",
+       "      <td>70</td>\n",
+       "      <td>105</td>\n",
+       "      <td>70</td>\n",
+       "      <td>120</td>\n",
+       "      <td>75</td>\n",
+       "      <td>3</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>491</th>\n",
+       "      <td>443</td>\n",
+       "      <td>Gible</td>\n",
+       "      <td>Dragon</td>\n",
+       "      <td>Ground</td>\n",
+       "      <td>300</td>\n",
+       "      <td>58</td>\n",
+       "      <td>70</td>\n",
+       "      <td>45</td>\n",
+       "      <td>40</td>\n",
+       "      <td>45</td>\n",
+       "      <td>42</td>\n",
+       "      <td>4</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       #                     Name  Type 1   Type 2  Total   HP  Attack  \\\n",
+       "302  279                 Pelipper   Water   Flying    430   60      50   \n",
+       "726  658                 Greninja   Water     Dark    530   72      95   \n",
+       "240  222                  Corsola   Water     Rock    380   55      55   \n",
+       "615  555  DarmanitanStandard Mode    Fire      NaN    480  105     140   \n",
+       "220  205               Forretress     Bug    Steel    465   75      90   \n",
+       "387  354      BanetteMega Banette   Ghost      NaN    555   64     165   \n",
+       "632  571                  Zoroark    Dark      NaN    510   60     105   \n",
+       "564  505                  Watchog  Normal      NaN    420   60      85   \n",
+       "376  344                  Claydol  Ground  Psychic    500   60      70   \n",
+       "491  443                    Gible  Dragon   Ground    300   58      70   \n",
+       "\n",
+       "     Defense  Sp. Atk  Sp. Def  Speed  Generation  Legendary  \n",
+       "302      100       85       70     65           3      False  \n",
+       "726       67      103       71    122           6      False  \n",
+       "240       85       65       85     35           2      False  \n",
+       "615       55       30       55     95           5      False  \n",
+       "220      140       60       60     40           2      False  \n",
+       "387       75       93       83     75           3      False  \n",
+       "632       60      120       60    105           5      False  \n",
+       "564       69       60       69     77           5      False  \n",
+       "376      105       70      120     75           3      False  \n",
+       "491       45       40       45     42           4      False  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pokemon_df.sample(10)"
    ]
   }
  ],
@@ -151,7 +448,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
